<resources>
    <string name="app_name">Popular Movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="detail_activity_label">Movie details</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sortOrder_title">Sort order</string>
    <string name="pref_sortOrder_dialog">Pick the sort order</string>
    <string name="pref_sortOrder_popular_entry">Most popular first</string>
    <string name="pref_sortOrder_popular_value">movie/popular</string>
    <string name="pref_sortOrder_topRated_entry">Highest rated first</string>
    <string name="pref_sortOrder_topRated_value">movie/top_rated</string>
    <string name="pref_sortOrder_key">pref_sortOrder</string>
    <string name="error_fetching">Error while fetching data</string>
    <string name="check_connection">Check internet connection</string>
    <string name="never_happens">Should never happen</string>
    <string name="show_favorite">Show favorite</string>
    <string name="change_sort_order">Change sort order</string>
    <string name="mark_as_favorite">Mark as Favorite</string>
    <string name="refresh">Refresh</string>
    <string name="sync_account_type">bpa95.github.io</string>
    <string name="content_authority">io.github.bpa95.popularmovies</string>
    <string name="play_arrow">Play arrow</string>
    <string name="add_to_favorite">Add to favorite</string>

    <string-array name="pref_sortOrder_entries">
        <item>@string/pref_sortOrder_popular_entry</item>
        <item>@string/pref_sortOrder_topRated_entry</item>
    </string-array>

    <string-array name="pref_sortOrder_values">
        <item>@string/pref_sortOrder_popular_value</item>
        <item>@string/pref_sortOrder_topRated_value</item>
    </string-array>

</resources>
