<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_favorite"
        android:orderInCategory="1"
        android:title="@string/show_favorite"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_star_border_white_24dp"/>

    <item
        android:id="@+id/action_sort_order"
        android:orderInCategory="2"
        android:title="@string/change_sort_order"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_sort_white_24dp"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>