<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/detail_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/detailTextBackground"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:paddingTop="12dp"
        android:textColor="@color/detailText"
        android:textSize="40sp"
        tools:text="Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:padding="12dp"
            tools:src="@drawable/jurassic" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="12dp">

            <TextView
                android:id="@+id/detail_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                tools:text="Release date:\n2014-11-05" />

            <TextView
                android:id="@+id/detail_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Rating:\n8.4/10" />


        </LinearLayout>

        <ImageButton
            android:id="@+id/mark_as_favorite_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:paddingTop="12dp"
            android:src="@drawable/ic_star_border_black_48dp"
            android:text="@string/mark_as_favorite"
            android:contentDescription="@string/add_to_favorite" />
    </LinearLayout>

    <TextView
        android:id="@+id/detail_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        tools:text="Interstellar chronicles the adventures of a group of explorers who make use of a newly discovered wormhole to surpass the limitations on human space travel and conquer the vast distances involved in an interstellar voyage." />

</LinearLayout>